feat: harden junit platform testing